marquee-scroll speed+

--- a/templates/header.html
+++ b/templates/header.html
@@ -98,7 +98,7 @@
                 SPPU, Pune</strong
               >
             </div>
-            <div class="sdg-title">PCCoE SDGs Campus Initiatives - सृष्टी</div>
+            <div class="sdg-title">सृष्टी - PCCoE SDGs Campus Initiative</div>
           </div>
 
           <!-- Right Logos -->
@@ -313,6 +313,7 @@
               class="marquee-content"
               style="
                 display: inline-block;
+                white-space: nowrap;
                 padding-left: 100%;
                 animation: marquee-scroll 10s linear infinite;
               "
@@ -344,7 +345,7 @@
             transform: translateX(0);
           }
           100% {
-            transform: translateX(-100%);
+            transform: translateX(-50%);
           }
         }
         .modern-marquee::-webkit-scrollbar {
